--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 h1 {
   text-align: center;
+  font-size: 80px;
+  color: #C5D5EA;
+  font-wieght: bold;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+body {
+  background-color: #343A40;
 }
