🛬🌷 Checkpoint ./shortcuts.html:11068696/158:31343558/660 ./index.html:11068696/82:31343558/130 ./style.css:11068696/142:31343558/66 ./shortcuts.css:11068696/135:31343558/23 ./blocksi.html:31343558/764 ./blocksi.css:31343558/1230

--- a/shortcuts.css
+++ b/shortcuts.css
@@ -15,9 +15,11 @@ body {
   background-color: #535C65;
   overflow: hidden;
 }
-button{
+
+button {
   background-color: #535C65;
   width: 33.3%;
+  cursor: pointer;
 }
 
 .topnav button {
@@ -36,4 +38,11 @@ button{
 .topnav button:hover {
   background-color: #;
   color: black;
+}
+
+.btn-1 {
+  position: relative;
+  top: -30px;
+  id: 100%
+  font-color: #B4C9E4;
 }
