--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a {
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
+
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -33,8 +33,9 @@ a {
   overflow: hidden;
 }
 
-/* Change the color of links on hover */
+
 .topnav a:hover {
   background-color: #;
   color: black;
+  transition-duration: 0.4s;
 }
