--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ h1 {
 
 body {
   background-color: #343A40;
-  padding: 3%;
+  padding: 2%;
 }
 
 a {
-  width: 33%;
+  width: 48.2%;
   cursor: pointer;
 }
 
@@ -23,7 +23,7 @@ a {
 
 
 .topnav a {
-  float: left;
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -31,6 +31,8 @@ a {
   font-size: 40px;
   display: block;
   overflow: hidden;
+  font-wieght: bold;
+  font-family: 'Titillium Web', sans-serif;
 }
 
 
