🚲🏠 Checkpoint ./blocksi/the_sphero_EDU-way.html:11068696/517 ./index.html:11068696/36 ./blocksi/blocksi.css:11068696/12 ./shortcuts/shortcuts.html:11068696/26 ./blocksi.css:11068696/60 ./The Sphero EDU Way.html:11068696/450

--- a/blocksi.css
+++ b/blocksi.css
@@ -97,6 +97,6 @@ button {
 
 button:hover {
   transition-duration: 0.4s;
-  background-color: #C1C2C2;
+  background-color: #BA2655;
   color: white;
 }
