--- a/shortcuts.css
+++ b/shortcuts.css
@@ -1,6 +1,6 @@
 h1 {
   text-align: center;
-  font-size: 80px;
+  font-size: 8;
   color: #B4C9E4;
   font-wieght: bold;
   font-family: 'Titillium Web', sans-serif;
