--- a/shortcuts.css
+++ b/shortcuts.css
@@ -1,6 +1,6 @@
 h1 {
   text-align: center;
-  font-size: 8;
+  font-size: 7vw;
   color: #B4C9E4;
   font-wieght: bold;
   font-family: 'Titillium Web', sans-serif;
@@ -9,6 +9,7 @@ h1 {
 body {
   background-color: #343A40;
   padding: 3%;
+  margin-top: 25px;
 }
 
 .topnav {
@@ -19,7 +20,7 @@ body {
     border: none;
     font-weight: bold;
     color: white;
-    padding: 19px 35px;
+    padding: 19px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -30,9 +31,9 @@ body {
     background-color: #535C65;
     position: absolute;
     left: 2%;
-    top: 1%;
+    top: 3%;
     border-radius: 100px;
-    width: 10%
+    width: 100px
 }
 
 .btn-1 {
@@ -52,11 +53,11 @@ button {
 
 .topnav button {
   float: left;
-  color: #f2f2f2;
+  color: #B4C9E4;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 3.5vw;
+  font-size: 4vw;
   border-width: 0px;
   overflow: hidden;
   display: block;
@@ -64,6 +65,6 @@ button {
 
 .topnav button:hover {
   background-color: #;
-  color: black;
+  color: #497BBD;
   transition-duration: 0.4s;
 }
