--- a/blocksi.css
+++ b/blocksi.css
@@ -54,7 +54,7 @@ h5 {
     border: none;
     font-weight: bold;
     color: white;
-    padding: 19px 35px;
+    padding: 19px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -64,10 +64,10 @@ h5 {
     cursor: pointer;
     background-color: #535C65;
     position: absolute;
-    left: 98px;
-    top: 50px;
+    left: 2%;
+    top: 3%;
     border-radius: 100px;
-    width: 10%;
+    width: 100px;
 }
 
 .btn-1: hover {
