--- a/shortcuts.css
+++ b/shortcuts.css
@@ -67,3 +67,22 @@ button {
   color: #497BBD;
   transition-duration: 0.4s;
 }
+table {
+  border-collapse: collapse;
+  width: 80%;
+  margin: auto;
+}
+th{
+  background-color: #ADADAD;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+  text-align: center;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(odd) {background-color: #E1E1E1;}
+
+</style>
