--- a/shortcuts.css
+++ b/shortcuts.css
@@ -5,6 +5,11 @@ h1 {
   font-wieght: bold;
   font-family: 'Titillium Web', sans-serif;
 }
+h2{
+  padding-left: 10%;
+  color: #B4C9E4;
+  font-size: 4vw;
+}
 
 body {
   background-color: #343A40;
@@ -74,6 +79,10 @@ table {
 }
 th{
   background-color: #ADADAD;
+  font-size: 3.5vw;
+}
+td{
+  font-size: 3vw;
 }
 
 th, td {
@@ -82,7 +91,7 @@ th, td {
   text-align: center;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even){background-color: #f2f2f2;}
 tr:nth-child(odd) {background-color: #E1E1E1;}
 
 </style>
