--- a/blocksi.css
+++ b/blocksi.css
@@ -31,6 +31,7 @@ p {
 
 .img-sphero {
   width: 300px;
+  display: block;
 }
 
 h4 {
@@ -94,4 +95,10 @@ button:hover {
   transition-duration: 0.4s;
   background-color: #BA2655;
   color: white;
+}
+table{
+  width: 100%;
+}
+td{
+  width: 50%;
 }
