--- a/ways.css
+++ b/ways.css
@@ -44,3 +44,30 @@ p {
   background-color: #C1C2C2;
   color: white;
 }
+
+
+.btn-2 {
+    border: none;
+    font-weight: bold;
+    color: white;
+    padding: 19px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: #535C65;
+    position: absolute;
+    left: 42%;
+    top: 30%;
+    border-radius: 35px;
+    width: 10%;
+}
+
+.btn-2:hover {
+  transition-duration: 0.4s;
+  background-color: #466686;
+  color: white;
+}
