--- a/shortcuts.css
+++ b/shortcuts.css
@@ -35,8 +35,8 @@ body {
     cursor: pointer;
     background-color: #535C65;
     position: absolute;
-    left: 2%;
-    top: 3%;
+    left: 10px;
+    top: 10px;
     border-radius: 100px;
     width: 100px
 }
@@ -93,5 +93,9 @@ th, td {
 
 tr:nth-child(even){background-color: #f2f2f2;}
 tr:nth-child(odd) {background-color: #E1E1E1;}
+
+h3{
+  color: orange;
+}
 
 </style>
