📷👲 Checkpoint ./shortcuts.html:31343558/135 ./blocksi.css:31343558/9 ./index.html:31343558/45 ./ways.css:31343558/7 ./style.css:31343558/53

--- a/style.css
+++ b/style.css
@@ -26,13 +26,14 @@ a {
   float: left;
   color: #B4C9E4;
   text-align: center;
-  padding: 2% 3%;
+  padding: .5% 3%;
   text-decoration: none;
   font-size: 4vw;
   display: block;
   overflow: hidden;
   font-wieght: bold;
   font-family: 'Titillium Web', sans-serif;
+  margin: auto;
 }
 
 
