👴💂 Checkpoint ./shortcuts.css:31343558/12 ./index.html:31343558/26 ./style.css:31343558/3 ./Informational Websites.html:31343558/3918 ./Informational Websites.css:31343558/1145

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a {
   float: left;
   color: #B4C9E4;
   text-align: center;
-  padding: .5% 3%;
+  padding: 3% 3%;
   text-decoration: none;
   font-size: 4vw;
   display: block;
