--- a/Informational Websites.css
+++ b/Informational Websites.css
@@ -40,3 +40,13 @@ body {
   background-color: #C1C2C2;
   color: white;
 }
+.hockeyButton{
+  background-image: url ("https://cdn.glitch.me/c0118d7c-6817-4132-bd1e-88766673ba5d%2Fdownload%20(10).jpeg?v=1639275326593") no-repeat;
+}
+table{
+  width: 100%;
+}
+td{
+  width: 50%;
+  text-align: center;
+}
