🛎💕 Checkpoint ./Informational Websites.html:31343558/592 ./Informational Websites.css:31343558/353 ./shortcuts.css:31343558/122

--- a/Informational Websites.css
+++ b/Informational Websites.css
@@ -47,17 +47,16 @@ table{
 td{
   width: 50%;
   text-align: center;
+  color: #E1E1E1;
+  font-weight: bold;
+  font-size: 4vw;
 }
 img {
-    border: none;
-    font-weight: bold;
     padding: 2vw 20px;
     display: block;
-    font-size: 2vw;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
     cursor: pointer;
     position: relative;
-    border-radius: 7px;
     margin: auto;
+    width: 50%;
+  
   }
