--- a/Unblocked Games.css
+++ b/Unblocked Games.css
@@ -9,9 +9,8 @@ h1 {
 body {
   background-color: #343A40;
   padding: 3%;
-  margin-top: 25px;
-
 }
+
 
 .btn-1 {
     border: none;
@@ -27,39 +26,37 @@ body {
     cursor: pointer;
     background-color: #535C65;
     position: absolute;
-    left: 10px;
-    top: 10px;
+    left: 2%;
+    top: 3%;
     border-radius: 100px;
-    width: 100px
+    width: 100px;
 }
 
-.btn-1 {
+.btn-1: hover {
   transition-duration: 0.4s;
-}
-
-.btn-1:hover {
   background-color: #C1C2C2;
   color: white;
 }
 
-table{
-  width: 100%;
-}
-
-td{
-  width: 50%;
-  text-align: center;
-  color: #E1E1E1;
-  font-weight: bold;
-  font-size: 4vw;
-}
-
-img {
+button {
+    border: none;
+    font-weight: bold;
     padding: 2vw 20px;
+    text-align: center;
+    text-decoration: none;
     display: block;
+    font-size: 2vw;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
     cursor: pointer;
+    background-color: red;
     position: relative;
+    border-radius: 7px;
     margin: auto;
-    width: 50%;
-  
   }
+
+button:hover {
+  transition-duration: 0.4s;
+  background-color: #BA2655;
+  color: white;
+}
