✂️🛋 Checkpoint ./shortcuts.html:11068696/269 ./Unblocked Games.html:11068696/508:31343558/1557 ./Unblocked Games.css:11068696/169:31343558/30

--- a/Unblocked Games.css
+++ b/Unblocked Games.css
@@ -75,3 +75,17 @@ iframe{
 
 
 
+p {
+  color: orange;
+  font-size: 25px;
+  text-align: center;
+}
+
+a {
+  color: red;
+}
+
+a:hover {
+  transition-duration: 0.4s;
+  color: purple;
+}
