--- a/Unblocked Games.css
+++ b/Unblocked Games.css
@@ -3,33 +3,33 @@ h1 {
   font-size: 7vw;
   color: #B4C9E4;
   font-wieght: bold;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 
 body {
   background-color: #343A40;
   padding: 3%;
+  overflow-x:hidden;
 }
 
-
 .btn-1 {
-    border: none;
-    font-weight: bold;
-    color: white;
-    padding: 19px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: #535C65;
-    position: absolute;
-    left: 2%;
-    top: 3%;
-    border-radius: 100px;
-    width: 100px;
+  border: none;
+  font-weight: bold;
+  color: white;
+  padding: 19px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: #535C65;
+  position: absolute;
+  left: 2%;
+  top: 3%;
+  border-radius: 100px;
+  width: 100px;
 }
 
 .btn-1:hover {
@@ -38,8 +38,7 @@ body {
   color: white;
 }
 
-button{
-
+button {
   overflow: hidden;
   float: left;
   display: block;
@@ -51,7 +50,7 @@ button{
   cursor: pointer;
   width: 25%;
   border-width: 0px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
   margin-bottom: 7.5vh;
 }
@@ -68,12 +67,10 @@ button{
   background-color: #ADE1E5;
 }
 
-iframe{
-  width: 100%;
-  height: 80vh;
+iframe {
+  width: 100vw;
+  height: 120vh;
 }
-
-
 
 p {
   color: orange;
@@ -88,4 +85,16 @@ a {
 a:hover {
   transition-duration: 0.4s;
   color: purple;
+}
+
+span {
+  position:relative;
+  margin:15px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: monospace;
+  padding: 30px 0px;
+  border: 1px solid white;
 }
