--- a/Unblocked Games.css
+++ b/Unblocked Games.css
@@ -8,7 +8,7 @@ h1 {
 
 body {
   background-color: #343A40;
-  padding: 3%;
+  padding: 3vw;
   overflow-x:hidden;
 }
 
@@ -68,8 +68,8 @@ button {
 }
 
 iframe {
-  width: 100vw;
-  height: 110vh;
+  width: 100%;
+  height: 80vh;
   position: relative;
   margin-top: 40px;
 }
@@ -105,10 +105,4 @@ span:hover {
   transition-duration: 0.4s;
   color: white;
   background-color: red;
-}
-
-h2 {
-  position: relative;
-  top: 215px;
-  left: 240px;
 }
