🛍👢 Checkpoint ./Unblocked Games.css:11068696/283 ./Unblocked Games.html:11068696/1

--- a/Unblocked Games.css
+++ b/Unblocked Games.css
@@ -106,3 +106,8 @@ span:hover {
   color: white;
   background-color: red;
 }
+
+#slopeButton:hover {
+  transition-duration: 0.4s;
+  background-color: red;
+}
