--- a/unblockedGames.css
+++ b/unblockedGames.css
@@ -61,7 +61,7 @@ button {
   background-color: #99D19C;
   width: 30%;
 }
-#alternativesButton {
+#billyButton {
   background-color: #79C7C5;
 }
 #improvementsButton {
