👐🍲 Checkpoint ./style.css:11068696/330:31343558/135 ./jack-plz-read.txt:11068696/5:31343558/16 ./informationalWebsites.html:11068696/1 ./unblockedGamesSlopeTest.html:11068696/150:31343558/7493 ./spectralAnalysis.html:11068696/2 ./informationalWebsites.css:11068696/61 ./discord.html:11068696/24

--- a/style.css
+++ b/style.css
@@ -19,9 +19,8 @@ a {
 .topnav {
   background-color: #535C65;
   overflow: hidden;
-  border-radius: 10pt; jack, read derins fil
-}
-
+  border-radius: 10pt; 
+}               
 .topnav a {
   float: left;
   color: #B4C9E4;
