--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 .topnav {
   background-color: #535C65;
   overflow: hidden;
-  border-radius: 10pt; 
+  border-radius: 10px ; 
 }               
 .topnav a {
   float: left;
