👧📊 Checkpoint ./discord.html:11068696/165 ./style.css:11068696/488 ./unblockedGames.css:11068696/285

--- a/unblockedGames.css
+++ b/unblockedGames.css
@@ -113,3 +113,8 @@ span:hover {
   transition-duration: 0.4s;
   background-color: Green;
 }
+
+#soccerPhysicsButton:hover {
+  transition-duration: 0.4s;
+  background-color: orange;
+}
