--- a/unblockedGames.css
+++ b/unblockedGames.css
@@ -71,7 +71,7 @@ button {
 
 iframe {
   width: 100%;
-  height: 100vh;
+  height: 500px;
   position: relative;
   margin-top: 40px;
 }
@@ -117,4 +117,9 @@ span:hover {
 #soccerPhysicsButton:hover {
   transition-duration: 0.4s;
   background-color: orange;
+}
+
+#billyButton:hover {
+  transition-duration: 0.4s;
+  background-color: #975E65;
 }
