🌈👕 Checkpoint ./unblockedGames.css:11068696/137

--- a/unblockedGames.css
+++ b/unblockedGames.css
@@ -122,3 +122,13 @@ span:hover {
   transition-duration: 0.4s;
   background-color: #975E65;
 }
+
+function {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
