--- a/unblockedGames.css
+++ b/unblockedGames.css
@@ -125,8 +125,8 @@ span:hover {
 
 function {
   height: 100%;
-  width: 100%;
-  position: absolute;
+  width: 200vw;
+  position: relative;
   top: 0px;
   right: 0px;
   bottom: 0px;
