--- a/unblockedGamesTest.css
+++ b/unblockedGamesTest.css
@@ -13,8 +13,45 @@ li a {
   text-decoration: none;
 }
 
-/* Change the link color on hover */
 li a:hover {
   background-color: #555;
   color: white;
 }
+.btn-1 {
+  border: none;
+  font-weight: bold;
+  color: white;
+  padding: 19px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: #535C65;
+  position: absolute;
+  left: 2%;
+  top: 3%;
+  border-radius: 100px;
+  width: 100px;
+}
+
+.btn-1:hover {
+  transition-duration: 0.4s;
+  background-color: #C1C2C2;
+  color: white;
+}
+h1 {
+  text-align: center;
+  font-size: 7vw;
+  color: #B4C9E4;
+  font-wieght: bold;
+  font-family: "Titillium Web", sans-serif;
+}
+
+body {
+  background-color: #343A40;
+  padding-top: 3%;
+  padding-right: 3%;
+  padding-bottom: 3%;
