🍁🎐 Checkpoint ./unblockedGamesHomeTest.html:31343558/4166 ./unblockedGamesTest.css:31343558/314 ./unblockedGamesSlopeTest.html:31343558/4394 ./shortcuts.css:31343558/3098 ./blocksi.css:31343558/3010 ./blocksi.html:31343558/4831 ./index.html:31343558/1583 ./informationalWebsites.html:31343558/2440

--- a/blocksi.css
+++ b/blocksi.css
@@ -3,7 +3,7 @@ h1 {
   font-size: 7vw;
   color: #B4C9E4;
   font-wieght: bold;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 
 body {
@@ -15,7 +15,6 @@ h3 {
   color: red;
   font-size: 40px;
   text-align: center;
-  
 }
 
 h2 {
@@ -28,7 +27,7 @@ p {
   font-size: 27px;
 }
 
-img{
+img {
   width: 50%;
   display: block;
   margin: auto;
@@ -50,23 +49,23 @@ h5 {
 }
 
 .btn-1 {
-    border: none;
-    font-weight: bold;
-    color: white;
-    padding: 19px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: #535C65;
-    position: absolute;
-    left: 2%;
-    top: 3%;
-    border-radius: 100px;
-    width: 100px;
+  border: none;
+  font-weight: bold;
+  color: white;
+  padding: 19px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: #535C65;
+  position: absolute;
+  left: 2%;
+  top: 3%;
+  border-radius: 100px;
+  width: 100px;
 }
 
 .btn-1:hover {
@@ -76,21 +75,21 @@ h5 {
 }
 
 button {
-    border: none;
-    font-weight: bold;
-    padding: 2vw 20px;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    font-size: 2vw;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: red;
-    position: relative;
-    border-radius: 7px;
-    margin: auto;
-  }
+  border: none;
+  font-weight: bold;
+  padding: 2vw 20px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 2vw;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: red;
+  position: relative;
+  border-radius: 7px;
+  margin: auto;
+}
 
 button:hover {
   transition-duration: 0.4s;
@@ -98,10 +97,10 @@ button:hover {
   color: white;
 }
 
-table{
+table {
   width: 100%;
 }
 
-td{
+td {
   width: 50%;
 }
