--- a/unblockedGamesTest.css
+++ b/unblockedGamesTest.css
@@ -59,7 +59,6 @@ body {
 .column {
   float: left;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
 }
 
 .left {
@@ -78,4 +77,20 @@ body {
 }
 * {
   box-sizing: border-box;
+}
+iframe {
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  margin-top: 40px;
+}
+span {
+  position: relative  ;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: monospace;
+  padding: 10px 30px;
+  border: 1px solid white;
 }
