--- a/style.css
+++ b/style.css
@@ -47,3 +47,37 @@ p {
   font-size: 35px;
 }
 
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .topnav{width: 8.33%;}
+  .topnav{width: 16.66%;}
+  .topnav{width: 25%;}
+  .topnav{width: 33.33%;}
+  .topnav{width: 41.66%;}
+  .topnav{width: 50%;}
+  .topnav{width: 58.33%;}
+  .topnav{width: 66.66%;}
+  .topnav{width: 75%;}
+  .topnav {width: 83.33%;}
+  .topnav {width: 91.66%;}
+  .topnav {width: 100%;}
+}
+@media only screen and (mivdth: 768px) {
+  /* For desktop: */
+  .topnav{width: 8.33%;}
+  .topnav{width: 16.66%;}
+  .topnav{width: 25%;}
+  .topnav{width: 33.33%;}
+  .topnav{width: 41.66%;}
+  .topnav{width: 50%;}
+  .topnav{width: 58.33%;}
+  .topnav{width: 66.66%;}
+  .topnav{width: 75%;}
+  .topnav {width: 83.33%;}
+  .topnav {width: 91.66%;}
+  .topnav {width: 100%;}
+}
