--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 h1 {
   text-align: center;
   font-size: 15vmin;
-  color: #B4C9E4;
+  color: #b4c9e4;
   font-wieght: bold;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 
 body {
-  background-color: #343A40;
+  background-color: #343a40;
   padding: 2%;
 }
 
@@ -17,13 +17,13 @@ a {
 }
 
 .topnav {
-  background-color: #535C65;
+  background-color: #535c65;
   overflow: hidden;
-  border-radius: 10px ; 
-}               
+  border-radius: 10px;
+}
 .topnav a {
   float: left;
-  color: #B4C9E4;
+  color: #b4c9e4;
   text-align: center;
   padding: 2% 2%;
   text-decoration: none;
@@ -31,13 +31,13 @@ a {
   display: block;
   overflow: hidden;
   font-wieght: bold;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
   margin: auto;
 }
 
 .topnav a:hover {
   background-color: #;
-  color: #497BBD;
+  color: #497bbd;
   transition-duration: 0.4s;
 }
 
@@ -53,31 +53,79 @@ p {
 
 @media only screen and (min-width: 600px) {
   /* For tablets: */
-  .topnav{width: 8.33%;}
-  .topnav{width: 16.66%;}
-  .topnav{width: 25%;}
-  .topnav{width: 33.33%;}
-  .topnav{width: 41.66%;}
-  .topnav{width: 50%;}
-  .topnav{width: 58.33%;}
-  .topnav{width: 66.66%;}
-  .topnav{width: 75%;}
-  .topnav {width: 83.33%;}
-  .topnav {width: 91.66%;}
-  .topnav {width: 100%;}
+  .topnav {
+    width: 8.33%;
+  }
+  .topnav {
+    width: 16.66%;
+  }
+  .topnav {
+    width: 25%;
+  }
+  .topnav {
+    width: 33.33%;
+  }
+  .topnav {
+    width: 41.66%;
+  }
+  .topnav {
+    width: 50%;
+  }
+  .topnav {
+    width: 58.33%;
+  }
+  .topnav {
+    width: 66.66%;
+  }
+  .topnav {
+    width: 75%;
+  }
+  .topnav {
+    width: 83.33%;
+  }
+  .topnav {
+    width: 91.66%;
+  }
+  .topnav {
+    width: 100%;
+  }
 }
 @media only screen and (mivdth: 768px) {
   /* For desktop: */
-  .topnav{width: 8.33%;}
-  .topnav{width: 16.66%;}
-  .topnav{width: 25%;}
-  .topnav{width: 33.33%;}
-  .topnav{width: 41.66%;}
-  .topnav{width: 50%;}
-  .topnav{width: 58.33%;}
-  .topnav{width: 66.66%;}
-  .topnav{width: 75%;}
-  .topnav {width: 83.33%;}
-  .topnav {width: 91.66%;}
-  .topnav {width: 100%;}
+  .topnav {
+    width: 8.33%;
+  }
+  .topnav {
+    width: 16.66%;
+  }
+  .topnav {
+    width: 25%;
+  }
+  .topnav {
+    width: 33.33%;
+  }
+  .topnav {
+    width: 41.66%;
+  }
+  .topnav {
+    width: 50%;
+  }
+  .topnav {
+    width: 58.33%;
+  }
+  .topnav {
+    width: 66.66%;
+  }
+  .topnav {
+    width: 75%;
+  }
+  .topnav {
+    width: 83.33%;
+  }
+  .topnav {
+    width: 91.66%;
+  }
+  .topnav {
+    width: 100%;
+  }
 }
